# CodeCLIUseOpenRouter

./: .env.example  .gitignore  README.md  README_GEMINI.md  claude-or.bat  claude-or.ps1  pyproject.toml  start.bat  start.ps1  start_gemini.ps1  start_gemini.py  start_proxy.py  test_gemini.py  test_proxy.py
src/: __init__.py  format_converter.py  gemini_format_converter.py  gemini_proxy_server.py  proxy_server.py
